--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#22252a</color>
+    <color name="black">#101010</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#efefef</color>
+    <color name="grey">#F6F6F6</color>
+    <color name="bg_btn_secondary">#303030</color>
+    <color name="text_btn_secondary">#DCDCDC</color>
 </resources>
